fix(material-experimental/popover-edit): Make cell focus indicator visible in high contrast (forced colors) mode

--- a/src/material-experimental/popover-edit/_popover-edit-theme.scss
+++ b/src/material-experimental/popover-edit/_popover-edit-theme.scss
@@ -72,6 +72,10 @@
                     opacity 100ms mat.$private-swift-ease-out-timing-function,
                     background-color 300ms mat.$private-swift-ease-out-timing-function;
         visibility: visible;
+
+        @include cdk.high-contrast {
+          border-bottom: 3px dashed black;
+        }
       }
     }
   }
